welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^SnakeBuggle:7: warning: enclosing method estFinal has result type Unit: return value discarded
        return true
        ^SnakeBuggle:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      } else { return false }
                      ^SnakeBuggle:8: warning: enclosing method estFinal has result type Unit: return value discarded
      } else { return false }
               ^SnakeBuggle:12: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
        return true
               ^SnakeBuggle:12: warning: enclosing method estFinal has result type Unit: return value discarded
        return true
        ^SnakeBuggle:13: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
      } else return false
                    ^SnakeBuggle:13: warning: enclosing method estFinal has result type Unit: return value discarded
      } else return false
             ^SnakeBuggle:32: error: value unary_! is not a member of Unit
  while (!estFinal())
         ^